--- a/Styling.css
+++ b/Styling.css
@@ -1,64 +1,119 @@
+body {
+	width: 960px;
+}
+
 section {
 	overflow: auto;
 	margin: 0px 10% 2% 0px;
 	text-align: center;
 	background-color: white; 
 	width: 100%;
-	border-bottom: 1px gray;
+	border-bottom: 4px solid #ebebeb;
+}
+
+a {
 }
 h1 {
 	/* your name */
 	background-color: #20B2AA;
 	padding: 2%;
-	color: white;
+	color: #ebebeb;
 	float: left;
-	margin: 0px 0px 0px 10%;
+	margin: 0px;
+}
+
+h2 {
+	border-bottom: 4px solid #ebebeb;
+	padding: 0px 0px 10px;
+	width: 90%;
+	margin: 25px;
+}
+
+h3 {
+	border-bottom: 2px solid #ebebeb;
+	width: 90%;
+	padding-bottom: 20px;
+	margin: 25px;
+
+
 }
 
 ul {
 	/* About Portfolio Contact */
-	color: #C0C0C0;
-	border-left: 1px solid gray;
+	font-family: sans-serif;
+	color: #ebebeb;
 	text-align: right;
 	font-size: 18;
 	float: right;
 	background-color: white;
 }
 
+.one:hover {
+	color: #A9A9A9;
+
+}
+
+.two:hover {
+	color: #A9A9A9;
+}
+
+.three:hover {
+	color: #A9A9A9;
+}
+
+.one {
+	border-left: 1px solid #C0C0C0;
+	margin-left: 10px;
+}
+
+.two {
+	border-left: 1px solid #C0C0C0;
+	margin-left: 10px;
+}
 p {
-	float: right;
 	color: #C0C0C0;
-	margin: 0px;
+	margin: 0px 0px 0px 25px;
 }
 
 article {
 	/* about me */ 
-	margin: 0px 2% 2% 10%;
+	border: 2px solid #ebebeb;
+	color:#20B2AA;
+	margin: 0px 20px 0px 0px;
 	background-color: white;
 	float: left;
-	width: 50%;
+	width: 650px;
+	margin-bottom: 2%;
+}
+
+.picture {
+	margin-left: 25px;
+	float: left;
 }
 
 div {
 	/* connect with me */
-	text-align: center;
+	font-family: "Times New Roman", Times, serif;
+	border: 2px solid #ebebeb;
 	color: #20B2AA;
 	background-color: white;
+	text-align: center;
 	float: left;
-	width: 15%;
-	padding: 2%;
-	margin: 0px 10% 0px 2%;
+	width: 270px;
+	padding: 0px 0px 50px;
+	margin: 0px 0px 20px 0px;
 }
 
 h4 {
 	/*copy right*/
 	clear: both;
-	border-top: 10px solid #20B2AA;
-	color: white;
+	border-top: 8px solid #20B2AA;
+	color: #ebebeb;
 	background-color: #696969;
 	font-size: 12;
-	padding: 2%;
+	padding: 2% 2% 1% 2%;
 	text-align: center;
-	vertical-align: text-bottom;
+	
+	margin-top: 25px;
 }
 
