--- a/Styling.css
+++ b/Styling.css
@@ -118,7 +118,7 @@ article {
 
 .picture {
 	margin-left: 25px;
-	float: left;
+	float: left;	
 }
 
 div {
@@ -156,9 +156,32 @@ h5 {
 	font-weight: lighter;
 }
 
-.Portfolio {
+/* attempted to add the name of the images with the correct color text box. I had:
+#Hangman {
 	float: left;
+	color: white;
+	margin-left: 10px;
+	width: 270px;
+	position: absolute;
+	color: white;
+	background-color: #20B2AA;
+	padding: 15px;
+	bottom: 10px;
 }
+
+Of course prior to doing that I had i had id set up for every image and text that went along with the images. I also tried groups for this and couldn't get it one.
+
+I was unable to position the image with the text and float it at the same time.  I was only able to do one or the other (Either one image with the correct text
+and format or the floating of all images with no text.
+
+I could of set the height of the profile box and added each image by marginalizing each picture
+and just moving it around the webpage like that and have it completely unrelated to the profile box, but I don't think that was the point of this assignment. 
+
+Was unable to remove the full link indicator from the "About Profile Contact" section, was able to take the underline off by using text-decoration: none; but
+unfortunately it did not remove the link to allow for the hover option that's scripted into this css.
+
+PS. Used Derek Jeter's Biography.  I will continue to work on this.
+*/
 
 
 
